Removing Lombok. Small refactoring on the code.